--- a/exercicios modulo 3/ex022/fundo006.html
+++ b/exercicios modulo 3/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -29,7 +29,9 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint harum illo optio! Sit quidem ea reprehenderit facere dolore ad ipsa ducimus alias magnam neque! Voluptatibus maxime magni quisquam perferendis ullam?
         Laboriosam quaerat ullam cupiditate consequuntur voluptatibus temporibus expedita, minus fugiat, esse maxime quisquam! In aperiam, id vitae modi adipisci eos accusamus suscipit veritatis magni enim dolor labore nisi laborum aliquam.
-        Accusantium ipsam corporis debitis necessitatibus qui dolorum voluptates, culpa sunt porro in? Quas, totam soluta! Dignissimos quidem ad deserunt. Temporibus repellat repellendus nisi quae laborum eveniet. Ullam rem ut accusantium?</p>
+        Accusantium ipsam corporis debitis necessitatibus qui dolorum voluptates, culpa sunt porro in? Quas, totam soluta! Dignissimos quidem ad deserunt. Temporibus repellat repellendus nisi quae laborum eveniet. Ullam rem ut accusantium? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem praesentium, quasi similique laborum, laudantium dolor omnis adipisci repellat voluptas temporibus nulla culpa blanditiis odio corrupti. Deleniti magnam odio autem eligendi.
+        Pariatur repellendus voluptate dignissimos, quia incidunt accusamus vitae quos explicabo nulla omnis repudiandae distinctio nam veritatis, suscipit at possimus expedita laboriosam dolor a architecto, saepe porro. Doloremque ea corrupti expedita.
+        Aliquam eius neque, laudantium eveniet accusamus at aliquid possimus, nobis deserunt placeat commodi aperiam nostrum! Harum quaerat ea, hic quisquam enim animi temporibus iste consequatur ex tempora dolores quasi corrupti. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam nisi magni similique tempora odit odio consequuntur! Nostrum ab nam quos facilis dolor, et eius quam veritatis, repudiandae quia natus ipsam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet maxime delectus rerum, necessitatibus nobis porro. Tempore voluptate quas voluptatem rem voluptates suscipit odio vero soluta ullam iste. Id, laborum eveniet? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur rerum voluptatibus adipisci dolores corrupti ut vero illum, voluptate fugiat nam quod autem eum recusandae! Aperiam aliquid accusamus minima facere consequatur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas facilis cupiditate illo ducimus fugit in dignissimos consequatur, earum nostrum officia quos iure nihil, molestias voluptatibus eveniet obcaecati sed fugiat. Quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dolores aut eveniet, sint neque itaque incidunt quasi minima placeat sit consequuntur, fuga explicabo natus alias quae repellat quia voluptatibus nostrum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. A laudantium repellendus praesentium dolor vero et, veniam distinctio numquam sed ipsam earum facilis, quisquam ad sapiente facere maxime sequi tempora iste! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas minima vero delectus iure. Recusandae, nemo. Error, tempora nobis maiores dicta iste repellendus obcaecati labore porro sed, praesentium magni mollitia facilis.</p>
     </main>
 </body>
 </html>
