--- a/exercicios modulo 3/ex023/tabela002.html
+++ b/exercicios modulo 3/ex023/tabela002.html
@@ -19,6 +19,14 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+            border-radius: 0.2em;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
@@ -34,6 +42,7 @@
     <!--  
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION 
             THEAD
                 TR, TD, TH
             TBODY
@@ -42,10 +51,11 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -160,7 +170,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>212 583 750</strong></td>
             </tr>
         </tfoot>
